--- a/assets/style.css
+++ b/assets/style.css
@@ -446,7 +446,7 @@ Taken from https://codepen.io/chriddyp/pen/bWLwgP.css
     text-decoration: none;
   }
   .bg-grey{
-    background-color: #10be10a9;
+    background-color: #ffffff;
   }
   .text-padding{
     padding: 5px;
